Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2585,13 +2585,12 @@ input, select, textarea {
 			margin: 0 0 1em 0;
 			display: block;
 			width: 100%;
-			height: 144px;
 			overflow: hidden;
 		}
 
 		.work-item .image img {
 			width: 100%;
-			height: 100%;
+			height: auto;
 			object-fit: fill; /* Stretch the image to fill the container */
 			border-radius: 0.35em;
 		}
